tests/cases/meta/errors/meta-function-missing-param.ari
meta fn bad() -> token_stream {
}

fn main() -> i64 {
  return 0;
}
